// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayNavigationBar collapses the previously expanded dropdown when trigger element is clicked 1`] = `
<div
  class="navbar-collapse collapse"
  style="height: 0px"
>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          aria-current="page"
          class="nav-link active"
          href="#1"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <button
          class="nav-link btn"
          type="button"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 2
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ClayNavigationBar renders 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-relative navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        data-testid="navbarToggler"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          Item 1
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                class="nav-link btn"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="#3"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar renders a custom item 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-relative navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        data-testid="navbarToggler"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          Item 1
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="my-custom-class active"
                href="#1"
              >
                Item 1
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar renders a dropdown when clicking the trigger element from NavigationBar 1`] = `
<div
  class="navbar-collapse show"
  style="height: 0px"
>
  <div
    class="container-fluid container-fluid-max-xl"
  >
    <ul
      class="navbar-nav"
    >
      <li
        class="nav-item"
      >
        <a
          aria-current="page"
          class="nav-link active"
          href="#1"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 1
          </span>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <button
          class="nav-link btn"
          type="button"
        >
          <span
            class="navbar-text-truncate"
          >
            Item 2
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ClayNavigationBar renders when passing more than one active item 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-relative navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        data-testid="navbarToggler"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          Item 1
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                aria-current="page"
                class="nav-link active btn"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="#3"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 3
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar renders with a single item 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-relative navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        data-testid="navbarToggler"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          Item 1
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`ClayNavigationBar throws a warning when passing more than one active prop to child 1`] = `
<div>
  <nav
    class="navbar navbar-collapse-relative navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary"
  >
    <div
      class="container-fluid container-fluid-max-xl"
    >
      <button
        aria-expanded="false"
        class="navbar-toggler navbar-toggler-link collapsed btn btn-unstyled"
        data-testid="navbarToggler"
        type="button"
      >
        <span
          class="navbar-text-truncate"
        >
          Item 1
        </span>
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom"
          role="presentation"
        >
          <use
            xlink:href="node_modules/clay-css/lib/images/icons/icons.svg#caret-bottom"
          />
        </svg>
      </button>
      <div
        class="navbar-collapse collapse"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="#1"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 1
                </span>
              </a>
            </li>
            <li
              class="nav-item"
            >
              <button
                aria-current="page"
                class="nav-link active btn"
                type="button"
              >
                <span
                  class="navbar-text-truncate"
                >
                  Item 2
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
